# energy-ade-registers

./: .gitmodules  README.md
ade9178/: readme.md
ade9178/examples/: app_cfg.h  cmd_format_example.c
ade9178/examples/projects/: CMakeLists.txt  CMakePresets.json  cmd_format_example.code-workspace
ade9178/include/: ade9178.h  ade9178_bitfield.h  ade9178_default.h  ade9178_enums.h  adi_ade9178_cmd_format.h
ade91xx/: readme.md
ade91xx/examples/: frame_format_example.c
ade91xx/examples/projects/: CMakeLists.txt  CMakePresets.json  frame_format_example.code-workspace
ade91xx/include/: ADE911X_addr_def.h  ADE911X_addr_rdef.h  adi_ade91xx_frame_format.h
adema12x/: readme.md
adema12x/examples/: app_cfg.h  frame_format_example.c
adema12x/examples/projects/: CMakeLists.txt  CMakePresets.json  frame_format_example.code-workspace
adema12x/include/: ADEMA127_addr_def.h  ADEMA127_addr_rdef.h  adi_adema12x_frame_format.h
crc/include/: ade_crc.h  crc.h
crc/source/: ade_crc.c  crc.c
docs/release_notes/: 1.1.0.md  1.2.0.md  index.md
include/: adi_adc_frame_format.h
